force-app/main/default/objects/Loan_Applicant__c/Loan_Applicant__c.object-meta.xml
<CustomObject>
    <label>Loan Applicant</label>
    <nameField>
        <displayFormat>LA-{0000}</displayFormat>
        <label>Loan Applicant Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Applicants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>