force-app/main/default/objects/Loan_Applicant__c/fields/Applicant_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Customer_ID__c</fullName>
    <label>Applicant Customer ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>