force-app/main/default/objects/Loan_Applicant__c/fields/Applicant_Name__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Name__c</fullName>
    <formula>Customer_Information__r.FirstName + &apos; &apos; + Customer_Information__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant Name</label>
    <type>Text</type>
</CustomField>