force-app/main/default/objects/Loan_Applicant__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Loan Applicants</relationshipLabel>
    <relationshipName>Loan_Applicants</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>