force-app/main/default/objects/Loan_Applicant__c/fields/Business_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Business_Address_Line_1__c</fullName>
    <label>Address Line 1</label>
    <type>TextArea</type>
</CustomField>