force-app/main/default/objects/Loan_Applicant__c/fields/Business_City__c.field-meta.xml
<CustomField>
    <fullName>Business_City__c</fullName>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>