force-app/main/default/objects/Loan_Applicant__c/fields/Business_Country__c.field-meta.xml
<CustomField>
    <fullName>Business_Country__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>India</fullName>
                <default>true</default>
                <label>India</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>