force-app/main/default/objects/Loan_Applicant__c/fields/Business_District__c.field-meta.xml
<CustomField>
    <fullName>Business_District__c</fullName>
    <label>District</label>
    <length>255</length>
    <type>Text</type>
</CustomField>