force-app/main/default/objects/Loan_Applicant__c/fields/Business_Pincode__c.field-meta.xml
<CustomField>
    <fullName>Business_Pincode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pincode</label>
    <referenceTo>MS_Pincode__c</referenceTo>
    <relationshipLabel>Loan Applicants (Pincode)</relationshipLabel>
    <relationshipName>Loan_Applicants2</relationshipName>
    <type>Lookup</type>
</CustomField>