force-app/main/default/objects/Loan_Applicant__c/fields/Business_State__c.field-meta.xml
<CustomField>
    <fullName>Business_State__c</fullName>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>