force-app/main/default/objects/Loan_Applicant__c/fields/Business_Village__c.field-meta.xml
<CustomField>
    <fullName>Business_Village__c</fullName>
    <label>Village</label>
    <length>255</length>
    <type>Text</type>
</CustomField>