force-app/main/default/objects/Loan_Applicant__c/fields/cifId__c.field-meta.xml
<CustomField>
    <fullName>cifId__c</fullName>
    <label>cifId</label>
    <length>200</length>
    <type>Text</type>
</CustomField>