force-app/main/default/objects/Loan_Applicant__c/fields/CKYC_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>CKYC_ID_Number__c</fullName>
    <label>CKYC ID Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>