force-app/main/default/objects/Loan_Applicant__c/fields/Communication_Address__c.field-meta.xml
<CustomField>
    <fullName>Communication_Address__c</fullName>
    <label>Communication Address</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Residence</fullName>
            </value>
            <value>
                <fullName>Permanent</fullName>
            </value>
            <value>
                <fullName>Business Address</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>