force-app/main/default/objects/Loan_Applicant__c/fields/Created_From__c.field-meta.xml
<CustomField>
    <fullName>Created_From__c</fullName>
    <label>Created From</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre Login</fullName>
                <default>true</default>
                <label>Pre Login</label>
            </value>
            <value>
                <fullName>Lead Details</fullName>
            </value>
            <value>
                <fullName>Process Credit</fullName>
            </value>
            <value>
                <fullName>Approval Credit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>