force-app/main/default/objects/Loan_Applicant__c/fields/Customer_Information__c.field-meta.xml
<CustomField>
    <fullName>Customer_Information__c</fullName>
    <label>Customer Information</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Loan Applicants</relationshipLabel>
    <relationshipName>Loan_Applicants</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>