force-app/main/default/objects/Loan_Applicant__c/fields/Duration_At_This_City_To__c.field-meta.xml
<CustomField>
    <fullName>Duration_At_This_City_To__c</fullName>
    <label>Duration At This City To</label>
    <type>Date</type>
</CustomField>