force-app/main/default/objects/Loan_Applicant__c/fields/Husband_Wife_s_Name__c.field-meta.xml
<CustomField>
    <fullName>Husband_Wife_s_Name__c</fullName>
    <label>Husband / Wife&apos;s Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>