force-app/main/default/objects/Loan_Applicant__c/fields/Initiate_From__c.field-meta.xml
<CustomField>
    <fullName>Initiate_From__c</fullName>
    <label>Initiate From</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prelogin</fullName>
                <default>true</default>
                <label>Prelogin</label>
            </value>
            <value>
                <fullName>Lead Details</fullName>
            </value>
            <value>
                <fullName>Process Credit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>