force-app/main/default/objects/Loan_Applicant__c/fields/Is_KYC_Verified__c.field-meta.xml
<CustomField>
    <fullName>Is_KYC_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is KYC Verified</label>
    <type>Checkbox</type>
</CustomField>