force-app/main/default/objects/Loan_Applicant__c/fields/isRetrigger__c.field-meta.xml
<CustomField>
    <fullName>isRetrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isRetrigger</label>
    <type>Checkbox</type>
</CustomField>