force-app/main/default/objects/Loan_Applicant__c/fields/KYC_Id_1__c.field-meta.xml
<CustomField>
    <fullName>KYC_Id_1__c</fullName>
    <label>KYC ID 1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>