force-app/main/default/objects/Loan_Applicant__c/fields/KYC_ID_Type_1__c.field-meta.xml
<CustomField>
    <fullName>KYC_ID_Type_1__c</fullName>
    <label>KYC ID Type 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aadhaar Card</fullName>
            </value>
            <value>
                <fullName>Voter Id</fullName>
            </value>
            <value>
                <fullName>Pan Card</fullName>
            </value>
            <value>
                <fullName>Driving License</fullName>
            </value>
            <value>
                <fullName>Passport</fullName>
            </value>
            <value>
                <fullName>PAN</fullName>
                <isActive>false</isActive>
                <label>PAN</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>