force-app/main/default/objects/Loan_Applicant__c/fields/LMS_Customer_Info_File_Number__c.field-meta.xml
<CustomField>
    <fullName>LMS_Customer_Info_File_Number__c</fullName>
    <label>LMS Customer Info File Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>