force-app/main/default/objects/Loan_Applicant__c/fields/Married__c.field-meta.xml
<CustomField>
    <fullName>Married__c</fullName>
    <label>Married</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>