force-app/main/default/objects/Loan_Applicant__c/fields/Mobile_Verified__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mobile Verified</label>
    <type>Checkbox</type>
</CustomField>