force-app/main/default/objects/Loan_Applicant__c/fields/Ownership_Status__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Status__c</fullName>
    <label>Ownership Status (Residence address)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Company Provided</fullName>
            </value>
            <value>
                <fullName>Hostel</fullName>
            </value>
            <value>
                <fullName>Lease Hold</fullName>
            </value>
            <value>
                <fullName>Owned By Parent</fullName>
            </value>
            <value>
                <fullName>Siblings</fullName>
            </value>
            <value>
                <fullName>Self</fullName>
            </value>
            <value>
                <fullName>Pagadi System</fullName>
            </value>
            <value>
                <fullName>Paying Guest</fullName>
            </value>
            <value>
                <fullName>Rented</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>