force-app/main/default/objects/Loan_Applicant__c/fields/Ownership_Type__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Type__c</fullName>
    <label>Ownership Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flat</fullName>
            </value>
            <value>
                <fullName>Independent House</fullName>
            </value>
            <value>
                <fullName>Row House</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>