force-app/main/default/objects/Loan_Applicant__c/fields/Permanent_Landmark__c.field-meta.xml
<CustomField>
    <fullName>Permanent_Landmark__c</fullName>
    <label>Landmark</label>
    <length>255</length>
    <type>Text</type>
</CustomField>