force-app/main/default/objects/Loan_Applicant__c/fields/Phone_Office__c.field-meta.xml
<CustomField>
    <fullName>Phone_Office__c</fullName>
    <label>Phone (Office)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>