force-app/main/default/objects/Loan_Applicant__c/fields/Phone_Residence__c.field-meta.xml
<CustomField>
    <fullName>Phone_Residence__c</fullName>
    <label>Phone (Residence)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>