force-app/main/default/objects/Loan_Applicant__c/fields/Residence_District__c.field-meta.xml
<CustomField>
    <fullName>Residence_District__c</fullName>
    <label>District</label>
    <length>255</length>
    <type>Text</type>
</CustomField>