force-app/main/default/objects/Loan_Applicant__c/fields/Residence_Flat_Plot_Number__c.field-meta.xml
<CustomField>
    <fullName>Residence_Flat_Plot_Number__c</fullName>
    <label>Flat/Plot Number</label>
    <type>TextArea</type>
</CustomField>