force-app/main/default/objects/Loan_Applicant__c/fields/Residence_Pincode__c.field-meta.xml
<CustomField>
    <fullName>Residence_Pincode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pincode</label>
    <referenceTo>MS_Pincode__c</referenceTo>
    <relationshipLabel>Loan Applicants</relationshipLabel>
    <relationshipName>Loan_Applicants</relationshipName>
    <type>Lookup</type>
</CustomField>