force-app/main/default/objects/Loan_Applicant__c/fields/Residence_Taluka__c.field-meta.xml
<CustomField>
    <fullName>Residence_Taluka__c</fullName>
    <label>Taluka</label>
    <length>255</length>
    <type>Text</type>
</CustomField>