force-app/main/default/objects/Loan_Applicant__c/fields/Same_As_Address_Business__c.field-meta.xml
<CustomField>
    <fullName>Same_As_Address_Business__c</fullName>
    <label>Same As Address</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Residence Address</fullName>
            </value>
            <value>
                <fullName>Permanent Address</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>