force-app/main/default/objects/Loan_Applicant__c/fields/Verification_Type__c.field-meta.xml
<CustomField>
    <fullName>Verification_Type__c</fullName>
    <label>Verification Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OCR</fullName>
            </value>
            <value>
                <fullName>Self</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>